Design update - Photo upload + minor bug fix for header color and alignment

--- a/frontend/src/containers/SnuVoice/TellMe/DocumentCreate/DocumentCreate.css
+++ b/frontend/src/containers/SnuVoice/TellMe/DocumentCreate/DocumentCreate.css
@@ -13,7 +13,7 @@
     min-height: 400px;
 }
 
-h1, h5 {
+.title {
     color: black;
     text-align: left;
 }
